# stt

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  PRD.md  README.md  build.rs  justfile
.cargo/: config.toml
docs/: architecture.md  models.md  setup.md
scripts/: download_test_audio.py  download_test_audio_simple.py  download_whisper_model.sh  export_onnx.py  requirements.txt  test_inference.py  test_wayland.sh  whisper_server.py
src/: app.rs  audio.rs  evdev_hotkey.rs  inference.rs  lib.rs  main.rs  mel.rs  paste.rs  streaming.rs  tokenizer.rs  wayland_hotkey.rs  wayland_paste.rs  whisper.rs  whisper_cpp.rs
