[package]
name = "stt"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[features]
default = []
cuda = []
metal = []

[dependencies]
anyhow = "1.0"
arboard = "3.4"
cpal = "0.16"
eframe = { version = "0.33", default-features = true }
egui = "0.33"
hound = "3.5"

[build-dependencies]
cmake = "0.1"
