[package]
name = "stt"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[features]
default = []
cuda = []
metal = []

[dependencies]
anyhow = "1.0"
arboard = "3.4"
cpal = "0.16"
dirs = "6"
eframe = { version = "0.33", default-features = true }
egui = "0.33"
global-hotkey = "0.7.0"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", default-features = false, features = ["global_shortcuts", "remote_desktop", "screencast", "async-io"] }
smol = "2"
futures-lite = "2"
evdev = "0.12"

[build-dependencies]
cmake = "0.1"
